# CensusxD_graphExplore

./: .gitignore  README.md  cleaning_nb.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
LLM_development/: b_c_tables.json  llm_dev_03.py  system_prompt_0.txt
public_data/: Merging_B_C_tables.py  cleaning_nb.ipynb  cleaning_script_1.py  network_chart.html
public_data/01_raw/: 2023_DataProductList.xlsx  ACS2023_Table_Shells.xlsx  acs2023_1yr_variables_LABEL_CONCEPT_Btables_part1 copy.txt  acs2023_1yr_variables_LABEL_CONCEPT_Btables_part2 copy.txt  acs2023_1yr_variables_LABEL_CONCEPT_Btables_part3 copy.txt  acs2023_1yr_variables_LABEL_CONCEPT_Btables_part4 copy.txt  acs2023_1yr_variables_LABEL_CONCEPT_Ctables.json
public_data/02_review/: d3_knowledge_graph.json  distinct_concepts.csv  formatted_mapped_tables.json  mapped_tables.json  part1_v2.js  processed_tables.json  table_concepts.json  table_labels.json
public_data/03_processed/: acs2023_1yr_b_tables_with_vars_LLM_part1_cleaned.json  acs2023_1yr_b_tables_with_vars_LLM_part4_cleaned.json  acs2023_1yr_c_tables_with_vars_LLM_cleaned.json
public_data/LLM_development/: llm_dev_01.py  llm_dev_02.py  llm_dev_03.py  llm_development_00.py
