[project]
name = "census-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Gareth Minson-Efimov",email = "garethminson@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.0,<2.0.0)",
    "gpt4all (>=2.8.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
